# decathlon_scrap

./: .gitignore  README.md  pyproject.toml
decathlon_scrap/: config.py  create_db.py  db_operations.py  decathlon_scrap.py  populate_db.py  stocks_scrap.py
decathlon_scrap/data/: app.db
tests/: test_create_db.py  test_decathlon_scrap.py  test_populate_db.py  test_stocks_scrap.py
