[tool.poetry]
name = "decathlon_scrap"
version = "0.1.0"
description = ""
authors = ["Guillaume Faguet <guillaume.faguet@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.6.0"
black = "^22.1.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
selenium = "^4.1.2"
webdriver-manager = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
